# Hades252

./: Cargo.toml  README.md
assets/: HOWTO.md
src/: mds_matrix.rs  round_constants.rs  strategies.rs
src/strategies/: gadget.rs  scalar.rs
