[package]
name = "hades"
version = "0.20.0"
authors = [
  "kev <kevtheappdev@gmail.com>", "zer0 <matteo@dusk.network>",
  "Victor Lopes <victor@dusk.network>", "kr0 <c.perezbaro@gmail.com>"
]
edition = "2021"
description ="Implementation of Hades252 permutation algorithm over the Bls12-381 Scalar field."
categories = ["algorithms", "cryptography", "no-std", "wasm"]
keywords = ["cryptography", "zero-knowledge", "crypto"]
license = "MPL-2.0"
repository = "https://github.com/dusk-network/hades252"

[dependencies]
bls12_381 = "0.8.0"

[dev-dependencies]
rand = "0.8"

[profile.release]
panic = 'abort'
lto = true
incremental = false
codegen-units = 1
